--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,7 @@ Menu
   object-fit: cover;
   height: 200px;
   width: 100%;
-  border: 0.25rem solid var(--clr-gold);
+  border: 0.4rem solid #A4DADC;
   border-radius: var(--radius);
   display: block;
 }
@@ -221,7 +221,7 @@ Menu
   margin-bottom: 0.5rem;
 }
 .price {
-  color: var(--clr-gold);
+  color: #C2A4DC;
 }
 .item-text {
   margin-bottom: 0;
